--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM       cyberdojofoundation/coffeescript:2.2.1
+FROM       cyberdojofoundation/coffeescript
 MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
 RUN npm install -g jasmine-node
