--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-FROM       cyberdojofoundation/coffeescript
-MAINTAINER Jon Jagger <jon@jaggersoft.com>
+FROM cyberdojofoundation/coffeescript
+LABEL maintainer=jon@jaggersoft.com
 
 RUN npm install -g jasmine-node
 
