--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM cyberdojofoundation/coffeescript
+FROM cyberdojofoundation/coffeescript:abfca76
 LABEL maintainer=jon@jaggersoft.com
 
 RUN npm install -g jasmine-node
